--- a/blog_on_rails/app/views/layouts/application.html.erb
+++ b/blog_on_rails/app/views/layouts/application.html.erb
@@ -19,6 +19,15 @@
         <div class="nav-item"><%= link_to "New Post", new_post_path %></div>
       </span>
     </nav>
+
+    <% if user_signed_in? %>
+      Hello <%= current_user.name %>,
+      <%= link_to "Logout", session_path, method: :delete, data: {confirm: "are you sure you want to log out?"}%>
+    <% else %>
+      <%= link_to "Login", new_session_path %> |
+      <%= link_to "Sign Up", new_user_path %>
+    <% end %>
+    <hr>
     
     
 
