--- a/blog_on_rails/app/views/posts/show.html.erb
+++ b/blog_on_rails/app/views/posts/show.html.erb
@@ -1,6 +1,9 @@
 <h1><%= @post.title%></h1>
 <p><%= @post.body %></p>
 <div>
+    created_by: <%= @post.user&.name || "Deleted" %>
+</div>
+<div>
     <small><%= time_ago_in_words(@post.updated_at)%></small>
     <div class="button">
         <%= link_to "Delete", post_path(@post.id), class: "btn btn-outline-primary", method: :delete, data: {confirm: "Are you sure you want to delete the post?"}%>
@@ -26,7 +29,9 @@
 <% @comments.each do |comment| %>
     <div class="comment">
         <p class="comment-body"><%= comment.body %><p>
-        <small>Commented <%= time_ago_in_words(comment.updated_at) %></small> •
+        <small>Commented <%= time_ago_in_words(comment.updated_at) %></small>
+            <div> Commented by: <%= comment.user&.name || "Deleted" %>
+    </div>
         <%= link_to "Delete", post_comment_path(comment.post_id, comment.id), method: :delete, data: {confirm: "Are you sure you want to delete your comment?"} %>
     </div>
 <% end %>
