--- a/blog_on_rails/app/views/posts/show.html.erb
+++ b/blog_on_rails/app/views/posts/show.html.erb
@@ -6,8 +6,12 @@
 <div>
     <small><%= time_ago_in_words(@post.updated_at)%></small>
     <div class="button">
-        <%= link_to "Delete", post_path(@post.id), class: "btn btn-outline-primary", method: :delete, data: {confirm: "Are you sure you want to delete the post?"}%>
+    <% if can? :crud, @post %>
         <%= link_to "Edit", edit_post_path(@post), class: "btn btn-outline-primary" %>
+    <% end %>
+    <% if can? :crud, @post %>
+        <%= link_to "Delete", post_path(@post.id), class: "btn btn-outline-primary", method: :delete, data: {confirm: "Are you sure you want to delete the post?"}%>
+    <% end %>
     </div>
 </div>
 
@@ -31,7 +35,7 @@
         <p class="comment-body"><%= comment.body %><p>
         <small>Commented <%= time_ago_in_words(comment.updated_at) %></small>
             <div> Commented by: <%= comment.user&.name || "Deleted" %>
-    </div>
-        <%= link_to "Delete", post_comment_path(comment.post_id, comment.id), method: :delete, data: {confirm: "Are you sure you want to delete your comment?"} %>
-    </div>
+        <% if can? :crud, comment %>
+            <%= link_to "Delete", post_comment_path(comment.post_id, comment.id), method: :delete, data: {confirm: "Are you sure you want to delete your comment?"} %>
+        <% end %>
 <% end %>
