Fixed password change function and added alert page v1.1

--- a/blog_on_rails/app/views/layouts/application.html.erb
+++ b/blog_on_rails/app/views/layouts/application.html.erb
@@ -28,10 +28,9 @@
       <%= link_to "Sign Up", new_user_path %>
     <% end %>
     <hr>
-    
-    
-
-    <% flash[:notice] || flash[:alert] %>
+    <div>
+      <%= render 'layouts/alerts' %>
+    </div>
     <%= yield %>
   </body>
 </html>
